# chem281-lab4

./: .gitignore  Dockerfile  README.md  build_image.sh  interactive.sh
openmp_exercises/: CMakeLists.txt
openmp_exercises/include/: openmp_exercise_1.h  openmp_exercise_2.h  openmp_exercise_3.h  openmp_exercise_4.h  openmp_exercise_5.h
openmp_exercises/src/: diffusion.cpp  exercise_profiling.cpp  openmp_exercise_1.cpp  openmp_exercise_2.cpp  openmp_exercise_3.cpp  openmp_exercise_4.cpp  openmp_exercise_5.cpp
openmp_exercises/test/: openmp_exercises_test.cpp
